fix card on mobile

--- a/components/card/style/card.module.scss
+++ b/components/card/style/card.module.scss
@@ -1,5 +1,5 @@
 .root {
-  width: 488px;
+  width: 492px;
   margin: 3% 0;
   box-shadow: 3px 9px 20px rgba(0, 0, 0, 0.05);
   background: #fff;
