--- a/src/container/content/style/content.module.scss
+++ b/src/container/content/style/content.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-around;
   flex-direction: column;
-  padding: 3% 9% !important;
+  padding: 3% 9%;
   padding-bottom: 8%;
 }
 .border {
